# cfcar

./: arquivo.csv  arquivo.json  pyproject.toml
src/: __init__.py  companies.py
