[tool.poetry]
name = "carjam-co-nz"
version = "0.1.0"
description = ""
authors = ["rafaeldecarvalho <rafaeldecarvalho.ps@gmail.com>"]
readme = "README.md"
packages = [{include = "carjam"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.3"
selenium-driverless = "^1.9.3.1"
selenium = "^4.23.1"
hrequests = "^0.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
